@@ -376,6 +376,7 @@ static void tr_init (TestResult *tr)
   tr->file = NULL;
   tr->tcname = NULL;
   tr->tname = NULL;
+  tr->duration = -1;
 }
 
 
